--- a/tsp-implementation/tsp.ipynb
+++ b/tsp-implementation/tsp.ipynb
@@ -371,19 +371,19 @@
    "id": "ac064cfc",
    "metadata": {},
    "source": [
-    "### Complejidad\n",
+    "### Complexity\n",
     "\n",
     "O($N^2 × 2^N$):\n",
-    "* $2^N$: Cada ciudad puede estar vistitada o no visitada, lo que genera todas las posibles combinaciones.\n",
-    "* $N$: Por cada subconjunto de ciudades visitadas, podemos estar en cualquiera de las $N$ ciudades. Esto da como resultado $N × 2^N$\n",
-    "* $N$: Adicionalmente, por cada estado, exploramos su vecinos. En un grafo completo cada nodo tiene $N-1$. Lo que resulta $N$.\n",
+    "* $2^N$: Each city can be visited or unvisited, which generates all possible combinations.\n",
+    "* $N$: For each subset of visited cities, we can be in any of the $N$ cities. This results in $N × 2^N$\n",
+    "* $N$: Additionally, for each state, we explore its neighbors. In a complete graph each node has $N-1$. Which results in $N$.\n",
     "\n",
-    "Entonces tenemos:\n",
-    "* Estados totales $= N × 2^N$\n",
-    "* Vecinos por estado = $N$\n",
-    "* Operaciones totales = $(N × 2^N)N = N^2×2^N$ \n",
+    "Then we have:\n",
+    "* Total states $= N × 2^N$\n",
+    "* Neighbors per state = $N$\n",
+    "* Total operations = $(N × 2^N)N = N^2×2^N$ \n",
     "\n",
-    "Utilizar UCS como algoritmo para resolver el Traveling Salesman Problem no impide que este método sea correcto para algunos tipos de problema. Sin embargo, si el número de nodos del grafo es numeroso, por ejemplo 20-100 nodos este algoritmo sería ineficiente, puesto que la exploracion de los nodos creceria exponencialmente. Sin embargo, el tamaño del problema es pequeño 5-8 nodos, donde UCS es factible y garantiza encontrar la solución óptima exacta. En el caso de que se tenga que incrementar el número de nodos, es necesario agregar heurísticas que sacrifican optimalidad por velocidad."
+    "Using UCS as an algorithm to solve the Traveling Salesman Problem does not prevent this method from being correct for some types of problems. However, if the number of nodes in the graph is large, for example 20-100 nodes, this algorithm would be inefficient, since the exploration of nodes would grow exponentially. However, the problem size is small 5-8 nodes, where UCS is feasible and guarantees finding the exact optimal solution. In case the number of nodes needs to be increased, it is necessary to add heuristics that sacrifice optimality for speed."
    ]
   }
  ],
