implement Christofides algorithm and Ant Colony Optimization for TSP

--- a/tsp-implementation/tsp-bc.ipynb
+++ b/tsp-implementation/tsp-bc.ipynb
@@ -63,11 +63,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "59b62210",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "graph = {\n",
+    "    'A': [('B', 3), ('C', 4), ('D', 8)],\n",
+    "    'B': [('A', 3), ('C', 2), ('D', 3)],\n",
+    "    'C': [('A', 4), ('B', 2), ('D', 4)],\n",
+    "    'D': [('A', 8), ('B', 3), ('C', 4)],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "dc017f22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "def minimum_spanning_tree(graph, start_node):\n",
+    "    mst_edges = []\n",
+    "    visited = {start_node}\n",
+    "    edges = [(cost, start_node, to) for to, cost in graph[start_node]]\n",
+    "    heapq.heapify(edges)\n",
+    "\n",
+    "    while edges:\n",
+    "        cost, frm, to = heapq.heappop(edges)\n",
+    "        if to not in visited:\n",
+    "            visited.add(to)\n",
+    "            mst_edges.append((frm, to, cost))\n",
+    "            for next_to, next_cost in graph[to]:\n",
+    "                if next_to not in visited:\n",
+    "                    heapq.heappush(edges, (next_cost, to, next_to))\n",
+    "    return mst_edges\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "863fd338",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minimum_weight_perfect_matching(graph, odd_nodes):\n",
+    "    if len(odd_nodes) == 0:\n",
+    "        return []\n",
+    "    if len(odd_nodes) == 2:\n",
+    "        return [(odd_nodes[0], odd_nodes[1])]\n",
+    "    \n",
+    "    matchings = []\n",
+    "    first_node = odd_nodes[0]\n",
+    "    for i in range(1, len(odd_nodes)):\n",
+    "        pair = (first_node, odd_nodes[i])\n",
+    "        remaining = odd_nodes[1:i] + odd_nodes[i+1:]\n",
+    "        sub_matching = minimum_weight_perfect_matching(graph, remaining)\n",
+    "        matchings.append([pair] + sub_matching)\n",
+    "    \n",
+    "    min_cost = float('inf')\n",
+    "    best_matching = None\n",
+    "    \n",
+    "    for matching in matchings:\n",
+    "        cost = 0\n",
+    "        for node1, node2 in matching:\n",
+    "            for neighbor, weight in graph[node1]:\n",
+    "                if neighbor == node2:\n",
+    "                    cost += weight\n",
+    "                    break\n",
+    "        \n",
+    "        if cost < min_cost:\n",
+    "            min_cost = cost\n",
+    "            best_matching = matching\n",
+    "    \n",
+    "    return best_matching"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "746a132a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "def find_eulerian_circuit(edges, start_node):\n",
+    "    \n",
+    "    adj = defaultdict(list)\n",
+    "    for u, v, weight in edges:\n",
+    "        adj[u].append(v)\n",
+    "        adj[v].append(u)\n",
+    "\n",
+    "    circuit = []\n",
+    "    stack = [start_node]\n",
+    "    current_path = []\n",
+    "    \n",
+    "    while stack:\n",
+    "        curr = stack[-1]\n",
+    "        if adj[curr]:\n",
+    "            next_node = adj[curr].pop()\n",
+    "            adj[next_node].remove(curr)\n",
+    "            stack.append(next_node)\n",
+    "        else:\n",
+    "            current_path.append(stack.pop())\n",
+    "    \n",
+    "    return current_path[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9fd2b66f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_hamiltonian_cycle(eulerian_circuit):\n",
+    "    visited = set()\n",
+    "    hamiltonian_cycle = []\n",
+    "    \n",
+    "    for node in eulerian_circuit:\n",
+    "        if node not in visited:\n",
+    "            visited.add(node)\n",
+    "            hamiltonian_cycle.append(node)\n",
+    "    \n",
+    "    if hamiltonian_cycle and hamiltonian_cycle[0] != hamiltonian_cycle[-1]:\n",
+    "        hamiltonian_cycle.append(hamiltonian_cycle[0])\n",
+    "    \n",
+    "    return hamiltonian_cycle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b167d330",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_path_cost(graph, path):\n",
+    "    total_cost = 0\n",
+    "    for i in range(len(path) - 1):\n",
+    "        node1, node2 = path[i], path[i + 1]\n",
+    "        for neighbor, weight in graph[node1]:\n",
+    "            if neighbor == node2:\n",
+    "                total_cost += weight\n",
+    "                break\n",
+    "    return total_cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a16340a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MST Path: [('A', 'B', 3), ('B', 'C', 2), ('B', 'D', 3)]\n",
+      "Perfect Matching: [('A', 'B'), ('C', 'D')]\n",
+      "Eulerian Graph: [('A', 'B', 3), ('B', 'C', 2), ('B', 'D', 3), ('A', 'B', 3), ('C', 'D', 4)]\n",
+      "Eulerian Circuit: ['A', 'B', 'D', 'C', 'B', 'A']\n",
+      "TSP Path: ['A', 'B', 'D', 'C', 'A']\n",
+      "TSP Cost: 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "def christofides_algorithm(graph, start_node='A'):\n",
+    "    mst_path = minimum_spanning_tree(graph, start_node)\n",
+    "    print(f\"MST Path: {mst_path}\")\n",
+    "\n",
+    "    degree = {}\n",
+    "    for frm, to, cost in mst_path:\n",
+    "        degree[frm] = degree.get(frm, 0) + 1\n",
+    "        degree[to] = degree.get(to, 0) + 1\n",
+    "    \n",
+    "    odd_degree_nodes = [node for node, deg in degree.items() if deg % 2]\n",
+    "\n",
+    "    perfect_matching = minimum_weight_perfect_matching(graph, odd_degree_nodes)\n",
+    "    print(f\"Perfect Matching: {perfect_matching}\")\n",
+    "\n",
+    "    eulerian_graph = mst_path.copy()\n",
+    "    for node1, node2 in perfect_matching:\n",
+    "        for neighbor, weight in graph[node1]:\n",
+    "            if neighbor == node2:\n",
+    "                eulerian_graph.append((node1, node2, weight))\n",
+    "                break\n",
+    "    print(f\"Eulerian Graph: {eulerian_graph}\")\n",
+    "\n",
+    "    eulerian_circuit = find_eulerian_circuit(eulerian_graph, start_node)\n",
+    "    print(f\"Eulerian Circuit: {eulerian_circuit}\")\n",
+    "\n",
+    "    tsp_path = make_hamiltonian_cycle(eulerian_circuit)\n",
+    "\n",
+    "    tsp_cost = calculate_path_cost(graph, tsp_path)\n",
+    "\n",
+    "    return tsp_path, tsp_cost\n",
+    "\n",
+    "tsp_path, tsp_cost = christofides_algorithm(graph)\n",
+    "print(f\"TSP Path: {tsp_path}\")\n",
+    "print(f\"TSP Cost: {tsp_cost}\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,10 +281,79 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "537ef8bc",
+   "id": "7f9709a6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TSP Path: ['A', 'C', 'D', 'B', 'A']\n",
+      "TSP Cost: 14.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ant_colony_optimization(graph, start_node, num_ants=10, num_iterations=50, alpha=1.0, beta=2.0, rho=0.5, Q=100):\n",
+    "    import numpy as np\n",
+    "    import random\n",
+    "    \n",
+    "    nodes = list(graph.keys())\n",
+    "    n_nodes = len(nodes)\n",
+    "    node_idx = {node: i for i, node in enumerate(nodes)}\n",
+    "    \n",
+    "    distances = np.zeros((n_nodes, n_nodes))\n",
+    "    for i, node1 in enumerate(nodes):\n",
+    "        for node2, cost in graph[node1]:\n",
+    "            j = node_idx[node2]\n",
+    "            distances[i, j] = cost\n",
+    "    \n",
+    "    pheromones = np.ones((n_nodes, n_nodes))\n",
+    "    heuristic = np.zeros((n_nodes, n_nodes))\n",
+    "    for i in range(n_nodes):\n",
+    "        for j in range(n_nodes):\n",
+    "            if i != j and distances[i, j] > 0:\n",
+    "                heuristic[i, j] = 1.0 / distances[i, j]\n",
+    "    \n",
+    "    best_tour = None\n",
+    "    best_cost = float('inf')\n",
+    "    start_idx = node_idx[start_node]\n",
+    "    \n",
+    "    for iteration in range(num_iterations):\n",
+    "        for ant in range(num_ants):\n",
+    "            visited = [start_idx]\n",
+    "            while len(visited) < n_nodes:\n",
+    "                current = visited[-1]\n",
+    "                unvisited = [i for i in range(n_nodes) if i not in visited]\n",
+    "                probabilities = []\n",
+    "                for j in unvisited:\n",
+    "                    prob = (pheromones[current, j] ** alpha) * (heuristic[current, j] ** beta)\n",
+    "                    probabilities.append(prob)\n",
+    "                total_prob = sum(probabilities)\n",
+    "                if total_prob == 0:\n",
+    "                    next_node = random.choice(unvisited)\n",
+    "                else:\n",
+    "                    probabilities = [p/total_prob for p in probabilities]\n",
+    "                    next_node = random.choices(unvisited, weights=probabilities)[0]\n",
+    "                visited.append(next_node)\n",
+    "            visited.append(start_idx)\n",
+    "            tour_cost = sum(distances[visited[i], visited[i+1]] for i in range(n_nodes))\n",
+    "            if tour_cost < best_cost:\n",
+    "                best_cost = tour_cost\n",
+    "                best_tour = visited.copy()\n",
+    "        pheromones = (1 - rho) * pheromones\n",
+    "        for i in range(n_nodes):\n",
+    "            a, b = best_tour[i], best_tour[i+1]\n",
+    "            pheromones[a, b] += Q / best_cost\n",
+    "            pheromones[b, a] += Q / best_cost\n",
+    "    best_path = [nodes[i] for i in best_tour]\n",
+    "    return best_path, best_cost\n",
+    "\n",
+    "# Example usage:\n",
+    "tsp_path, tsp_cost = ant_colony_optimization(graph, start_node='A')\n",
+    "print('TSP Path:', tsp_path)\n",
+    "print('TSP Cost:', tsp_cost)\n"
+   ]
   }
  ],
  "metadata": {
@@ -93,7 +363,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.12"
   }
  },
