--- a/tsp-implementation/tsp-bc.ipynb
+++ b/tsp-implementation/tsp-bc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 169,
    "id": "64ca7e66",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 170,
    "id": "78fb68cf",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 171,
    "id": "558f1b70",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
        "  ('San Quintin', np.int64(315))]}"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 172,
    "id": "dc017f22",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "id": "863fd338",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "id": "746a132a",
    "metadata": {},
    "outputs": [],
@@ -253,16 +253,14 @@
     "from collections import defaultdict\n",
     "\n",
     "def find_eulerian_circuit(edges, start_node):\n",
-    "    \n",
     "    adj = defaultdict(list)\n",
-    "    for u, v, weight in edges:\n",
-    "        adj[u].append(v)\n",
-    "        adj[v].append(u)\n",
+    "    for origin, destination, _ in edges:\n",
+    "        adj[origin].append(destination)\n",
+    "        adj[destination].append(origin)\n",
     "\n",
-    "    circuit = []\n",
     "    stack = [start_node]\n",
     "    current_path = []\n",
-    "    \n",
+    "\n",
     "    while stack:\n",
     "        curr = stack[-1]\n",
     "        if adj[curr]:\n",
@@ -271,13 +269,13 @@
     "            stack.append(next_node)\n",
     "        else:\n",
     "            current_path.append(stack.pop())\n",
-    "    \n",
+    "\n",
     "    return current_path[::-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 175,
    "id": "9fd2b66f",
    "metadata": {},
    "outputs": [],
@@ -299,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 176,
    "id": "b167d330",
    "metadata": {},
    "outputs": [],
@@ -317,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 177,
    "id": "a16340a1",
    "metadata": {},
    "outputs": [
@@ -383,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 178,
    "id": "a05bbcd1",
    "metadata": {},
    "outputs": [
@@ -412,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 179,
    "id": "7f9709a6",
    "metadata": {},
    "outputs": [
@@ -488,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 180,
    "id": "beb7ace5",
    "metadata": {},
    "outputs": [
@@ -509,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 181,
    "id": "96924659",
    "metadata": {},
    "outputs": [
@@ -529,8 +527,8 @@
       "\n",
       "Eulerian Circuit: ['Tijuana', 'Tecate', 'Mexicali', 'San Felipe', 'San Quintin', 'Ensenada', 'Rosarito', 'Tijuana']\n",
       "\n",
-      "Christofides Algorithm Execution Time: 0.0005 seconds\n",
-      "Ant Colony Optimization Execution Time: 0.0127 seconds\n"
+      "Christofides Algorithm Execution Time: 0.0007 seconds\n",
+      "Ant Colony Optimization Execution Time: 0.0130 seconds\n"
      ]
     }
    ],
@@ -560,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 182,
    "id": "232fc45a",
    "metadata": {},
    "outputs": [
@@ -583,12 +581,12 @@
       "=== Christofides ===\n",
       "Costo TSP: 851\n",
       "Ruta: A -> O -> I -> F -> N -> B -> E -> H -> C -> L -> G -> K -> D -> J -> M -> A\n",
-      "Tiempo de ejecución: 0.002671 segundos\n",
+      "Tiempo de ejecución: 0.002175 segundos\n",
       "\n",
       "=== Ant Colony Optimization (ACO) ===\n",
       "Costo TSP: 517.0\n",
       "Ruta: A -> D -> J -> M -> C -> L -> B -> G -> K -> I -> O -> F -> N -> E -> H -> A\n",
-      "Tiempo de ejecución: 0.181067 segundos\n"
+      "Tiempo de ejecución: 0.181599 segundos\n"
      ]
     }
    ],
